# youtube_app

api/youtube_api/: settings.py
backend/youtube_api/: db.sqlite3
backend/youtube_api/api/: models.py  views.py
frontend/youtube_react/: package-lock.json  package.json
frontend/youtube_react/src/: App.css  App.js  index.js
frontend/youtube_react/src/components/: Login.js  Main.js  NavBar.js  VideoDetail.js  VideoItem.js  VideoList.js
frontend/youtube_react/src/context/: ApiContext.js
youtube_api/: db.sqlite3  pyproject.toml  requirements.txt
youtube_api/api/: admin.py  models.py  serializers.py  urls.py
youtube_api/api/migrations/: 0001_initial.py
youtube_api/youtube_api/: settings.py  urls.py
youtube_front/: package-lock.json  package.json
